Fixed some clippy behavior bugs

--- a/src/components/Clippy/Clippy.module.css
+++ b/src/components/Clippy/Clippy.module.css
@@ -13,6 +13,10 @@
   width: calc(236px / var(--resolution));
 }
 
+.window img {
+  background-color: #348aa5;
+}
+
 .speed {
   display: inline-block;
   padding-right: 1rem;
